Updated NetisHR files

--- a/netishr/help.html
+++ b/netishr/help.html
@@ -388,6 +388,18 @@
 
                 <div class="fh-column">
                     <div class="full-height-scroll">
+
+                        <form method="get" action="index.html" class="pull-right mail-search">
+                            <div class="input-group">
+                                <input type="text" class="form-control input-sm" name="search" placeholder="Search help">
+                                <div class="input-group-btn">
+                                    <button type="submit" class="btn btn-sm btn-primary">
+                                        Search
+                                    </button>
+                                </div>
+                            </div>
+                        </form>
+
                         <ul class="list-group elements-list">
                             <li class="list-group-item">
                                 <ul>
