--- a/netishr/index.html
+++ b/netishr/index.html
@@ -1052,10 +1052,68 @@
 
 
             var data1 = [
-                [1, 0.23], [2, 0.10], [3, 0.40], [4, 0], [5, 0.20], [6, 0.35], [7, 1.5], [8, 2.45], [9, 0.1], [10, 0.40], [11, 0.15], [12, 0.20]
+                [1, 10.23],
+                [2, 10.10],
+                [3, 10.40],
+                [4, 9.90],
+                [5, 9.20],
+                [6, 9.35],
+                [7, 9.5],
+                [8, 9.45],
+                [9, 9.1],
+                [10, 9.40],
+                [11, 9.15],
+                [12, 10.20]
+                [13, 10.23],
+                [14, 10.10],
+                [15, 8.40],
+                [16, 10],
+                [17, 10.20],
+                [18, 10.35],
+                [19, 9.30],
+                [20, 9.45],
+                [21, 10.1],
+                [22, 9.40],
+                [23, 11.15],
+                [24, 10.20],
+                [25, 10.20],
+                [26, 8.35],
+                [27, 10.5],
+                [28, 9.45],
+                [29, 10.1],
+                [30, 10.40]
             ];
             var data2 = [
-                [1, 0.23], [2, 0.23], [3, 0.23], [4, 0.23], [5, 0.23], [6, 0.23], [7, 0.23], [8, 0.23], [9, 0.23], [10, 0.23], [11, 0.23], [12, 0.23]
+                [1, 9.10],
+                [2, 9.10],
+                [3, 9.40],
+                [4, 9.10],
+                [5, 9.16],
+                [6, 9.25],
+                [7, 9.0],
+                [8, 9.25],
+                [9, 9.10],
+                [10, 9.10],
+                [11, 9.15],
+                [12, 9.0]
+                [13, 8.23],
+                [14, 8.30],
+                [15, 8.40],
+                [16, 9],
+                [17, 9.20],
+                [18, 8.35],
+                [19, 9.10],
+                [20, 9.25],
+                [21, 9.1],
+                [22, 9.10],
+                [23, 9.15],
+                [24, 9.20],
+                [25, 9.20],
+                [26, 9.35],
+                [27, 9.5],
+                [28, 8.45],
+                [29, 9.1],
+                [30, 8.40]
             ];
             $("#flot-dashboard-chart").length && $.plot($("#flot-dashboard-chart"), [
                 data1, data2
@@ -1076,8 +1134,7 @@
                         show: true
                     },
                     shadowSize: 2,
-
-                    label: ["#month", "average"],
+                    label: ["Average", "Mine"],
                 },
                 grid: {
                     hoverable: true,
