--- a/netishr/delme.html
+++ b/netishr/delme.html
@@ -30,7 +30,7 @@
         </div>
     </div>
 
-    <iframe>http://v2.netishr.com/Applicants/Apply/d1b057f0-c192-48a2-9cda-fa5ed72bb070</iframe>
+    <iframe src="http://v2.netishr.com/Applicants/Apply/d1b057f0-c192-48a2-9cda-fa5ed72bb070"></iframe>
 
     <!-- Mainly scripts -->
     <script src="js/jquery-2.1.1.js"></script>
