Updated NetisHR files

--- a/netishr/delme.html
+++ b/netishr/delme.html
@@ -16,13 +16,11 @@
 
 </head>
 
-<body class="gray-bg">
+<body>
 
 
-    <div class="middle-box text-center animated fadeInDown">
 
-        <iframe src="http://v2.netishr.com/Applicants/Apply/d1b057f0-c192-48a2-9cda-fa5ed72bb070"></iframe>
-    </div>
+    <iframe src="http://v2.netishr.com/Applicants/Apply/d1b057f0-c192-48a2-9cda-fa5ed72bb070"></iframe>
 
 
     <!-- Mainly scripts -->
