--- a/netishr/delme.html
+++ b/netishr/delme.html
@@ -8,11 +8,11 @@
 
     <title>NetisHR | 404 Error</title>
 
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="font-awesome/css/font-awesome.css" rel="stylesheet">
-
-    <link href="css/animate.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <script>
+        function resizeIframe(obj) {
+            obj.style.height = obj.contentWindow.document.body.scrollHeight + 'px';
+        }
+    </script>
 
 </head>
 
@@ -20,12 +20,8 @@
 
 
 
-    <iframe src="http://v2.netishr.com/Applicants/Apply/d1b057f0-c192-48a2-9cda-fa5ed72bb070"></iframe>
+    <iframe src="http://v2.netishr.com/Applicants/Apply/d1b057f0-c192-48a2-9cda-fa5ed72bb070" frameborder="0" scrolling="no" onload="resizeIframe(this)" />
 
-
-    <!-- Mainly scripts -->
-    <script src="js/jquery-2.1.1.js"></script>
-    <script src="js/bootstrap.min.js"></script>
 
 </body>
 
