Updated NetisHR files

--- a/netishr/delme.html
+++ b/netishr/delme.html
@@ -20,7 +20,7 @@
 
 
 
-    <iframe src="http://v2.netishr.com/Applicants/Apply/d1b057f0-c192-48a2-9cda-fa5ed72bb070" frameborder="0" scrolling="no" onload="resizeIframe(this)" />
+    <iframe src="http://v2.netishr.com/Applicants/Apply/d1b057f0-c192-48a2-9cda-fa5ed72bb070" frameborder="0" />
 
 
 </body>
