Updated NetisHR files

--- a/netishr/training_administration_participants.html
+++ b/netishr/training_administration_participants.html
@@ -20,7 +20,7 @@
 
     <div id="wrapper">
 
-                <nav class="navbar-default navbar-static-side" role="navigation">
+        <nav class="navbar-default navbar-static-side" role="navigation">
             <div class="sidebar-collapse">
                 <ul class="nav metismenu" id="side-menu">
                     <li class="nav-header">
@@ -240,7 +240,7 @@
                     </div>
                     <ul class="nav navbar-top-links navbar-right">
                         <li>
-                            <span class="m-r-sm text-muted welcome-message">Welcome to NetisHR.</span>
+                            <span class="m-r-sm text-muted welcome-message">Welcome to NetisHR.<br>Sunday, 17:31, April 30, 2017</span>
                         </li>
                         <li class="dropdown">
                             <a class="dropdown-toggle count-info" data-toggle="dropdown" href="#">
