--- a/netishr/mysettings-mailnotifications.html
+++ b/netishr/mysettings-mailnotifications.html
@@ -412,8 +412,8 @@
                                             <div class="row">
                                                 <div class="col-sm-2">
                                                     <div class="onoffswitch">
-                                                        <input type="checkbox" checked class="onoffswitch-checkbox" id="picassigned">
-                                                            <label class="onoffswitch-label" for="picassigned">
+                                                        <input type="checkbox" checked class="onoffswitch-checkbox" id="leave">
+                                                            <label class="onoffswitch-label" for="leave">
                                                                 <span class="onoffswitch-inner"></span>
                                                                 <span class="onoffswitch-switch"></span>
                                                             </label>
@@ -426,8 +426,8 @@
                                             <div class="row">
                                                 <div class="col-sm-2">
                                                     <div class="onoffswitch">
-                                                        <input type="checkbox" checked class="onoffswitch-checkbox" id="picassigned">
-                                                            <label class="onoffswitch-label" for="picassigned">
+                                                        <input type="checkbox" checked class="onoffswitch-checkbox" id="overtime">
+                                                            <label class="onoffswitch-label" for="overtime">
                                                                 <span class="onoffswitch-inner"></span>
                                                                 <span class="onoffswitch-switch"></span>
                                                             </label>
@@ -435,6 +435,48 @@
                                                 </div>
                                                 <div class="col-sm-10">
                                                     Overtime request
+                                                </div>
+                                            </div>
+                                            <div class="row">
+                                                <div class="col-sm-2">
+                                                    <div class="onoffswitch">
+                                                        <input type="checkbox" checked class="onoffswitch-checkbox" id="attendance">
+                                                            <label class="onoffswitch-label" for="attendance">
+                                                                <span class="onoffswitch-inner"></span>
+                                                                <span class="onoffswitch-switch"></span>
+                                                            </label>
+                                                    </div>
+                                                </div>
+                                                <div class="col-sm-10">
+                                                    Attendance request
+                                                </div>
+                                            </div>
+                                            <div class="row">
+                                                <div class="col-sm-2">
+                                                    <div class="onoffswitch">
+                                                        <input type="checkbox" checked class="onoffswitch-checkbox" id="medical">
+                                                            <label class="onoffswitch-label" for="medical">
+                                                                <span class="onoffswitch-inner"></span>
+                                                                <span class="onoffswitch-switch"></span>
+                                                            </label>
+                                                    </div>
+                                                </div>
+                                                <div class="col-sm-10">
+                                                    Medical expense request
+                                                </div>
+                                            </div>
+                                            <div class="row">
+                                                <div class="col-sm-2">
+                                                    <div class="onoffswitch">
+                                                        <input type="checkbox" checked class="onoffswitch-checkbox" id="businesstrip">
+                                                            <label class="onoffswitch-label" for="businesstrip">
+                                                                <span class="onoffswitch-inner"></span>
+                                                                <span class="onoffswitch-switch"></span>
+                                                            </label>
+                                                    </div>
+                                                </div>
+                                                <div class="col-sm-10">
+                                                    Business trip request
                                                 </div>
                                             </div>
                                         </div>
