--- a/netishr/mysettings.html
+++ b/netishr/mysettings.html
@@ -440,9 +440,11 @@
                                                     </div>
                                                 </div>
                                                 <div class="col-sm-10">
-                                                    All mail notifications
+                                                    Mail notifications sending
                                                 </div>
-                                                <div class="col-sm-12">Or, <a href="">set mail notification per feature</a>.</div>
+                                                <!--
+                                                <div class="col-sm-12">Or, <a href="mysettings-mailnotifications.html">set mail notification per feature</a>.</div>
+-->
                                             </div>
                                         </div>
                                     </div>
