Left menu updatedUpdated NetisHR files

--- a/netishr/career_transfer.html
+++ b/netishr/career_transfer.html
@@ -37,7 +37,7 @@
 
 <body>
     <div id="wrapper">
-                <nav class="navbar-default navbar-static-side" role="navigation">
+        <nav class="navbar-default navbar-static-side" role="navigation">
             <div class="sidebar-collapse">
                 <ul class="nav metismenu" id="side-menu">
                     <li class="nav-header">
@@ -496,6 +496,10 @@
                                                             <span class="pull-right">DIV-ACC Accounting Division</span>
                                                             <label>Sub-level</label>
                                                         </li>
+                                                        <li class="list-group-item">
+                                                            <span class="pull-right">8</span>
+                                                            <label>Grade</label>
+                                                        </li>
                                                     </ul>
                                                 </div>
                                                 <div class="col-sm-4">
@@ -528,6 +532,7 @@
                                         </div>
                                     </div>
                                 </div>
+                                <div class="hr-line-dashed"></div>
                                 <div class="row">
                                     <div class="col-sm-12">
                                         <div class="form-group">
@@ -612,6 +617,10 @@
                                                         <li class="list-group-item">
                                                             <span class="pull-right">DIV-ACC Accounting Division</span>
                                                             <label>Sub-level</label>
+                                                        </li>
+                                                        <li class="list-group-item">
+                                                            <span class="pull-right">9</span>
+                                                            <label>Grade</label>
                                                         </li>
                                                     </ul>
                                                 </div>
