Updated NetisHR files

--- a/netishr/administrator.html
+++ b/netishr/administrator.html
@@ -32,7 +32,7 @@
 
 <body>
     <div id="wrapper">
-                        <nav class="navbar-default navbar-static-side" role="navigation">
+        <nav class="navbar-default navbar-static-side" role="navigation">
             <div class="sidebar-collapse">
                 <ul class="nav metismenu" id="side-menu">
                     <li class="nav-header">
@@ -421,6 +421,10 @@
                                     </div>
                                     <div class="ibox-content">
                                         <p></p>
+                                        <div><a href="administrator_organization_settings.html">Settings</a>
+                                            <div class="small">Settings for organization modules</div>
+                                        </div>
+                                        <p></p>
                                         <div><a href="administrator_groups.html">Groups</a>
                                             <div class="small">Set up companies and branches</div>
                                         </div>
@@ -537,8 +541,9 @@
                                     <div class="ibox-content">
                                         <div><a href="administrator_career_settings.html">Settings</a>
                                             <div class="small">Career policy settings</div>
-                                        </div><p>
-</p>
+                                        </div>
+                                        <p>
+                                        </p>
                                     </div>
                                 </div>
                             </div>
