Updated NetisHR files

--- a/netishr/system_management.html
+++ b/netishr/system_management.html
@@ -32,7 +32,7 @@
 
 <body>
     <div id="wrapper">
-                        <nav class="navbar-default navbar-static-side" role="navigation">
+        <nav class="navbar-default navbar-static-side" role="navigation">
             <div class="sidebar-collapse">
                 <ul class="nav metismenu" id="side-menu">
                     <li class="nav-header">
@@ -400,7 +400,7 @@
                                             <div class="small">Various system information</div>
                                         </div>
                                         <p></p>
-                                        <div><a href="#">System Settings</a>
+                                        <div><a href="system_settings.html">System Settings</a>
                                             <div class="small">Various system settings</div>
                                         </div>
                                         <p></p>
