Updated NetisHR files

--- a/netishr/mysettings.html
+++ b/netishr/mysettings.html
@@ -514,6 +514,7 @@
 	<option timeZoneId="81" gmtAdjustment="GMT+12:00" useDaylightTime="0" value="12">(GMT+12:00) Fiji, Kamchatka, Marshall Is.</option>
 	<option timeZoneId="82" gmtAdjustment="GMT+13:00" useDaylightTime="0" value="13">(GMT+13:00) Nuku'alofa</option>
 </select>	
+                                                Time now: 21:52:10 on Saturday, May 20, 2017
                                             </div>
                                         </div>
                                         <div class="form-group">
