Updated NetisHR files

--- a/netishr/recruitment_recruitmentplanning.html
+++ b/netishr/recruitment_recruitmentplanning.html
@@ -25,7 +25,7 @@
 
     <div id="wrapper">
 
-                        <nav class="navbar-default navbar-static-side" role="navigation">
+        <nav class="navbar-default navbar-static-side" role="navigation">
             <div class="sidebar-collapse">
                 <ul class="nav metismenu" id="side-menu">
                     <li class="nav-header">
@@ -435,7 +435,7 @@
                                                                 <td> 15/12/2016</td>
                                                                 <td> External</td>
                                                                 <td> 2</td>
-                                                                <td> 20</td>
+                                                                <td><a href="recruitment_recruitmentplanning_applicants.html"> 20</a></td>
                                                                 <td>
                                                                     <div class="btn-group">
                                                                         <a href="recruitment_recruitmentplanning_new.html">
@@ -454,7 +454,7 @@
                                                                 <td> 15/12/2016</td>
                                                                 <td> External</td>
                                                                 <td> 2</td>
-                                                                <td> 20</td>
+                                                                <td><a href="recruitment_recruitmentplanning_applicants.html"> 20</a></td>
                                                                 <td>
                                                                     <div class="btn-group">
                                                                         <a href="recruitment_recruitmentplanning_new.html">
@@ -473,7 +473,7 @@
                                                                 <td> 15/12/2016</td>
                                                                 <td> External</td>
                                                                 <td> 2</td>
-                                                                <td> 20</td>
+                                                                <td><a href="recruitment_recruitmentplanning_applicants.html"> 20</a></td>
                                                                 <td>
                                                                     <div class="btn-group">
                                                                         <a href="recruitment_recruitmentplanning_new.html">
@@ -492,7 +492,7 @@
                                                                 <td> 15/12/2016</td>
                                                                 <td> External</td>
                                                                 <td> 2</td>
-                                                                <td> 20</td>
+                                                                <td><a href="recruitment_recruitmentplanning_applicants.html"> 20</a></td>
                                                                 <td>
                                                                     <div class="btn-group">
                                                                         <a href="recruitment_recruitmentplanning_new.html">
@@ -511,7 +511,7 @@
                                                                 <td> 15/12/2016</td>
                                                                 <td> External</td>
                                                                 <td> 2</td>
-                                                                <td> 20</td>
+                                                                <td><a href="recruitment_recruitmentplanning_applicants.html"> 20</a></td>
                                                                 <td>
                                                                     <div class="btn-group">
                                                                         <a href="recruitment_recruitmentplanning_new.html">
