--- a/netishr/persons_applicants.html
+++ b/netishr/persons_applicants.html
@@ -17,6 +17,7 @@
     <link href="css/animate.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 
+    <link href="css/plugins/chosen/bootstrap-chosen.css" rel="stylesheet">
 
 
 </head>
@@ -25,7 +26,7 @@
 
     <div id="wrapper">
 
-                        <nav class="navbar-default navbar-static-side" role="navigation">
+        <nav class="navbar-default navbar-static-side" role="navigation">
             <div class="sidebar-collapse">
                 <ul class="nav metismenu" id="side-menu">
                     <li class="nav-header">
@@ -374,14 +375,160 @@
             <div class="wrapper wrapper-content  animated fadeInRight">
                 <div class="row">
                     <div class="col-sm-8">
+
+
+                        <div class="ibox float-e-margins">
+                            <div class="ibox-title">
+                                <h5>Search</h5>
+                                <div class="ibox-tools">
+                                    <a class="collapse-link">
+                                        <i class="fa fa-chevron-up"></i>
+                                    </a>
+
+                                    <!--
+                                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                                        <i class="fa fa-wrench"></i>
+                                    </a>
+                                    <ul class="dropdown-menu dropdown-user">
+                                        <li><a href="#">Config option 1</a>
+                                        </li>
+                                        <li><a href="#">Config option 2</a>
+                                        </li>
+                                    </ul>
+-->
+                                </div>
+                            </div>
+                            <div class="ibox-content">
+                                <div class="row">
+                                    <div class="col-sm-6">
+                                        <label class="control-label">Keywords: </label>
+                                        <div class="form-group">
+                                            <input type="text" placeholder="Keywords" class="input form-control">
+                                        </div>
+                                    </div>
+                                    <div class="col-sm-6">
+                                        <div class="form-group">
+                                            <label class="control-label">Unit: </label>
+                                            <div class="input-group">
+                                                <select data-placeholder="Choose a job title..." class="chosen-select input-sm form-control" tabindex="2">
+                                                    <option value="0" selected>Any</option>
+                                                    <option value="1">DIR-BR Director of Business Development</option>
+                                                    <option value="2">DIR-FIN Director of Finance</option>
+                                                    <option value="3">DIR-HR Director of HR</option>
+                                                </select>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-sm-12">
+                                        <div class="form-group">
+                                            <label class="control-label">Job title: </label>
+                                            <div class="input-group">
+                                                <select data-placeholder="Choose a job title..." class="chosen-select input-sm form-control" tabindex="2">
+                                                    <option value="0" selected>Any</option>
+                                                    <option value="1">DIR-BR Director of Business Development</option>
+                                                    <option value="2">DIR-FIN Director of Finance</option>
+                                                    <option value="3">DIR-HR Director of HR</option>
+                                                </select>
+                                                <span class="input-group-btn">
+                                                    <button type="button" class="btn btn-sm btn-white" data-toggle="modal" data-target="#searchjobtitle">Browse</button>
+                                                </span>
+                                                <div class="modal" id="searchjobtitle">
+                                                    <div class="modal-dialog">
+                                                        <div class="modal-content animated">
+                                                            <div class="modal-header">
+                                                                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                                                                <h4 class="modal-title">Browse for job title</h4>
+                                                            </div>
+                                                            <div class="modal-body">
+                                                                <div class="row">
+                                                                    <div class="col-sm-3">
+                                                                        Job level
+                                                                    </div>
+                                                                    <div class="col-sm-9">
+                                                                        <select data-placeholder="Choose a job level..." class="chosen-select" tabindex="2">
+                                                                            <option value="1">01-EXE EXECUTIVE </option>
+                                                                            <option value="2"> 02-DIR DIREKTORAT</option>
+                                                                            <option value="3">03-DIV DIVISI</option>
+                                                                            <option value="3" selected>04-DEPT DEPARTMENT</option>
+                                                                            <option value="3">05-SEC SECTION</option>
+                                                                            <option value="3">06-STAFF STAFF</option>
+                                                                        </select>
+                                                                    </div>
+                                                                </div>
+                                                                <div class="row">
+                                                                    <div class="col-sm-3">
+                                                                        Job sub-level
+                                                                    </div>
+                                                                    <div class="col-sm-9">
+                                                                        <select data-placeholder="Choose a job sub-level..." class="chosen-select" tabindex="2">
+                                                                            <option value="1">DEPT-HC Department Human Capital</option>
+                                                                            <option value="2">DEPT-FA Department Finance Accounting</option>
+                                                                            <option value="3" selected>DEPT-TECH Department Technology</option>
+                                                                            <option value="3">DEPT-ACC Department Accounting</option>
+                                                                        </select>
+                                                                    </div>
+                                                                </div>
+                                                                <div class="row">
+                                                                    <div class="col-sm-3">
+                                                                        Job title
+                                                                    </div>
+                                                                    <div class="col-sm-9">
+                                                                        <select data-placeholder="Choose a job title..." class="chosen-select" tabindex="2">
+                                                                            <option value="1">MGR-BR Manager of Business Development</option>
+                                                                            <option selected value="2">MGR-FIN Manager of Finance</option>
+                                                                            <option value="3">MGR-HR Manager of HR</option>
+                                                                        </select>
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+                                                            <div class="modal-footer">
+                                                                <button type="button" class="btn btn-white" data-dismiss="modal">Cancel</button>
+                                                                <button type="button" class="btn btn-primary">Select</button>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="row">
+                                    <div class="col-sm-12">
+                                        <div class="form-group">
+                                            <label class="control-label" for="date_added">Vacancy</label>
+
+                                            <div>
+                                                <select data-placeholder="Choose a vacancy..." class="chosen-select">
+                                                    <option value="0" selected>Any</option>
+                                                    <option value="1">11 - Marketing Staff - External</option>
+                                                    <option value="2">21 - Finance Manager - Internal</option>
+                                                    <option value="3">33 - Software Engineer - External</option>
+                                                    <option value="4">36 - Account Manager - External</option>
+                                                </select>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-sm-12">
+                                        <div class="form-group">
+                                            <button type="button" class="btn btn btn-primary pull-right"> <i class="fa fa-search"></i> Search</button>
+                                        </div>
+                                    </div>
+                                </div>
+
+
+                            </div>
+                        </div>
+
+
+
                         <div class="ibox">
                             <div class="ibox-content">
-                                <div class="input-group">
-                                    <input type="text" placeholder="Search applicants " class="input form-control">
-                                    <span class="input-group-btn">
-                                        <button type="button" class="btn btn btn-primary"> <i class="fa fa-search"></i> Search</button>
-                                </span>
-                                </div>
+
                                 <br>
                                 <a href="persons_applicants_profile.html">
                                     <button type="button" class="btn btn-primary btn-xs">New applicant</button>
@@ -872,14 +1019,18 @@
     <script src="js/plugins/metisMenu/jquery.metisMenu.js"></script>
     <script src="js/plugins/slimscroll/jquery.slimscroll.min.js"></script>
 
+    <!-- Chosen -->
+    <script src="js/plugins/chosen/chosen.jquery.js"></script>
+
+    <script>
+        $('.chosen-select').chosen({
+            width: "100%"
+        });
+    </script>
 
     <!-- Custom and plugin javascript -->
     <script src="js/inspinia.js"></script>
     <script src="js/plugins/pace/pace.min.js"></script>
-    <script src="js/w3data.js"></script>
-    <script>
-        w3IncludeHTML();
-    </script>
 </body>
 
 </html>
