--- a/netishr/reset_password.html
+++ b/netishr/reset_password.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>NetisHR | Forgot password</title>
+    <title>NetisHR | Reset password</title>
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="font-awesome/css/font-awesome.css" rel="stylesheet">
@@ -24,18 +24,23 @@
             <div class="col-md-12">
                 <div class="ibox-content">
 
-                    <h2 class="font-bold">Forgot password</h2>
-
-                    <p>
-                        Enter your email address and your password will be reset and emailed to you.
-                    </p>
+                    <h2 class="font-bold">Reset password</h2>
 
                     <div class="row">
 
                         <div class="col-lg-12">
                             <form class="m-t" role="form" action="index.html">
+                                <p>Your email address: arnold.siboro@netikaindonesia.com</p>
+                                <p>
+                                    Enter your new password twice.
+                                </p>
+
                                 <div class="form-group">
-                                    <input type="email" class="form-control" placeholder="Email address" required="">
+                                    <input type="email" class="form-control" placeholder="Enter new password" required="">
+                                </div>
+
+                                <div class="form-group">
+                                    <input type="email" class="form-control" placeholder="Enter new password again" required="">
                                 </div>
 
                                 <button type="submit" class="btn btn-primary block full-width m-b">Send new password</button>
