Updated NetisHR files

--- a/netishr/persons_applicants.html
+++ b/netishr/persons_applicants.html
@@ -409,14 +409,12 @@
                                     <div class="col-sm-6">
                                         <div class="form-group">
                                             <label class="control-label">Unit: </label>
-                                            <div class="input-group">
-                                                <select data-placeholder="Choose a job title..." class="chosen-select input-sm form-control" tabindex="2">
-                                                    <option value="0" selected>Any</option>
-                                                    <option value="1">DIR-BR Director of Business Development</option>
-                                                    <option value="2">DIR-FIN Director of Finance</option>
-                                                    <option value="3">DIR-HR Director of HR</option>
-                                                </select>
-                                            </div>
+                                            <select data-placeholder="Choose a unit..." class="chosen-select input-sm form-control" tabindex="2">
+                                                <option value="0" selected>Any</option>
+                                                <option value="1">DIR-BR Director of Business Development</option>
+                                                <option value="2">DIR-FIN Director of Finance</option>
+                                                <option value="3">DIR-HR Director of HR</option>
+                                            </select>
                                         </div>
                                     </div>
                                 </div>
