--- a/netishr/persons_staffs.html
+++ b/netishr/persons_staffs.html
@@ -18,6 +18,10 @@
     <link href="css/style.css" rel="stylesheet">
 
 
+    <link href="css/plugins/chosen/bootstrap-chosen.css" rel="stylesheet">
+
+    <!-- Chosen -->
+    <script src="js/plugins/chosen/chosen.jquery.js"></script>
 
 </head>
 
@@ -25,7 +29,7 @@
 
     <div id="wrapper">
 
-                        <nav class="navbar-default navbar-static-side" role="navigation">
+        <nav class="navbar-default navbar-static-side" role="navigation">
             <div class="sidebar-collapse">
                 <ul class="nav metismenu" id="side-menu">
                     <li class="nav-header">
@@ -372,42 +376,130 @@
 
                 </div>
             </div>
-            <div class="wrapper wrapper-content  animated fadeInRight">
+            <div class="wrapper wrapper-content">
                 <div class="row">
                     <div class="col-sm-8">
+
+                        <div class="ibox float-e-margins">
+                            <div class="ibox-title">
+                                <h5>Search</h5>
+                                <div class="ibox-tools">
+                                    <a class="collapse-link">
+                                        <i class="fa fa-chevron-up"></i>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="ibox-content">
+                                <div class="row">
+                                    <div class="col-sm-6">
+                                        <label class="control-label">Keywords: </label>
+                                        <div class="form-group">
+                                            <input type="text" placeholder="Keywords" class="input form-control">
+                                        </div>
+                                    </div>
+                                    <div class="col-sm-6">
+                                        <div class="form-group">
+                                            <label class="control-label">Unit: </label>
+                                            <select data-placeholder="Choose a unit..." class="chosen-select input-sm form-control" tabindex="2">
+                                                <option value="0" selected>Any</option>
+                                                <option value="1">DIR-BR Director of Business Development</option>
+                                                <option value="2">DIR-FIN Director of Finance</option>
+                                                <option value="3">DIR-HR Director of HR</option>
+                                            </select>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-sm-12">
+                                        <div class="form-group">
+                                            <label class="control-label">Job title: </label>
+                                            <div class="input-group">
+                                                <select data-placeholder="Choose a job title..." class="chosen-select input-sm form-control" tabindex="2">
+                                                    <option value="0" selected>Any</option>
+                                                    <option value="1">DIR-BR Director of Business Development</option>
+                                                    <option value="2">DIR-FIN Director of Finance</option>
+                                                    <option value="3">DIR-HR Director of HR</option>
+                                                </select>
+                                                <span class="input-group-btn">
+                                                    <button type="button" class="btn btn-sm btn-white" data-toggle="modal" data-target="#searchjobtitle">Browse</button>
+                                                </span>
+                                                <div class="modal" id="searchjobtitle">
+                                                    <div class="modal-dialog">
+                                                        <div class="modal-content animated">
+                                                            <div class="modal-header">
+                                                                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                                                                <h4 class="modal-title">Browse for job title</h4>
+                                                            </div>
+                                                            <div class="modal-body">
+                                                                <div class="row">
+                                                                    <div class="col-sm-3">
+                                                                        Job level
+                                                                    </div>
+                                                                    <div class="col-sm-9">
+                                                                        <select data-placeholder="Choose a job level..." class="chosen-select" tabindex="2">
+                                                                            <option value="1">01-EXE EXECUTIVE </option>
+                                                                            <option value="2"> 02-DIR DIREKTORAT</option>
+                                                                            <option value="3">03-DIV DIVISI</option>
+                                                                            <option value="3" selected>04-DEPT DEPARTMENT</option>
+                                                                            <option value="3">05-SEC SECTION</option>
+                                                                            <option value="3">06-STAFF STAFF</option>
+                                                                        </select>
+                                                                    </div>
+                                                                </div>
+                                                                <div class="row">
+                                                                    <div class="col-sm-3">
+                                                                        Job sub-level
+                                                                    </div>
+                                                                    <div class="col-sm-9">
+                                                                        <select data-placeholder="Choose a job sub-level..." class="chosen-select" tabindex="2">
+                                                                            <option value="1">DEPT-HC Department Human Capital</option>
+                                                                            <option value="2">DEPT-FA Department Finance Accounting</option>
+                                                                            <option value="3" selected>DEPT-TECH Department Technology</option>
+                                                                            <option value="3">DEPT-ACC Department Accounting</option>
+                                                                        </select>
+                                                                    </div>
+                                                                </div>
+                                                                <div class="row">
+                                                                    <div class="col-sm-3">
+                                                                        Job title
+                                                                    </div>
+                                                                    <div class="col-sm-9">
+                                                                        <select data-placeholder="Choose a job title..." class="chosen-select" tabindex="2">
+                                                                            <option value="1">MGR-BR Manager of Business Development</option>
+                                                                            <option selected value="2">MGR-FIN Manager of Finance</option>
+                                                                            <option value="3">MGR-HR Manager of HR</option>
+                                                                        </select>
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+                                                            <div class="modal-footer">
+                                                                <button type="button" class="btn btn-white" data-dismiss="modal">Cancel</button>
+                                                                <button type="button" class="btn btn-primary">Select</button>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="row">
+                                    <div class="col-sm-12">
+                                        <div class="form-group">
+                                            <button type="button" class="btn btn btn-primary pull-right"> <i class="fa fa-search"></i> Search</button>
+                                        </div>
+                                    </div>
+                                </div>
+
+
+                            </div>
+                        </div>
+
+
                         <div class="ibox">
                             <div class="ibox-content">
 
-                                <div class="row">
-                                    <div class="col-sm-4">
-                                        <div class="form-group">
-                                            <label class="control-label" for="status">Unit</label>
-                                            <select name="status" id="status" class="form-control">
-                                                <option value="0" selected>Any</option>
-                                                <option value="1">IT Team</option>
-                                                <option value="2">Marketing Communication</option>
-                                            </select>
-                                        </div>
-                                    </div>
-                                    <div class="col-sm-4">
-                                        <div class="form-group">
-                                            <label class="control-label" for="status">Job Title</label>
-                                            <select name="status" id="status" class="form-control">
-                                                <option value="0" selected>Any</option>
-                                                <option value="1">IT Developer</option>
-                                                <option value="2">Marketing Staff</option>
-                                            </select>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="input-group">
-                                    <input type="text" placeholder="Search staffs" class="input form-control">
-                                    <span class="input-group-btn">
-                                        <button type="button" class="btn btn btn-primary"> <i class="fa fa-search"></i> Search</button>
-                                </span>
-                                </div>
-                                <br>
                                 <a href="persons_staffs_profile.html">
                                     <button type="button" class="btn btn-primary btn-xs">New Staff</button>
                                 </a>
@@ -901,9 +993,112 @@
     <!-- Custom and plugin javascript -->
     <script src="js/inspinia.js"></script>
     <script src="js/plugins/pace/pace.min.js"></script>
-    <script src="js/w3data.js"></script>
+
+    <!-- Chosen -->
+    <script src="js/plugins/chosen/chosen.jquery.js"></script>
+    <!-- Page-Level Scripts -->
     <script>
-        w3IncludeHTML();
+        $(document).ready(function () {
+            $('.alert-success').hide();
+            $('.netis_saving').hide();
+            $('.netis_cancel').hide();
+            $('.summernote').summernote('disable');
+
+            $('.footable').footable();
+            $('.footable2').footable();
+            $('.summernote').summernote();
+
+            $('.netis_edit').click(function () {
+                $('.netis_saving').show();
+                $('.netis_cancel').show();
+                $('.netis_edit').hide();
+                $('.summernote').summernote('enable');
+            });
+            $('.netis_cancel').click(function () {
+                $('.netis_saving').hide();
+                $('.netis_cancel').hide();
+                $('.netis_edit').show();
+                $('.alert-success').hide();
+                $('.summernote').summernote('disable');
+            });
+            $('.netis_saving').click(function () {
+                $('.alert-success').show();
+                $('.netis_saving').hide();
+                $('.netis_cancel').hide();
+                $('.netis_edit').show();
+                $('.summernote').summernote('disable');
+            });
+            $('.netis_modal_saving').click(function () {
+                $('.alert-success').show();
+            });
+            $('.netis_modal_close').click(function () {
+                $('.alert-success').hide();
+            });
+            $('.dataTables-example').DataTable({
+                pageLength: 25,
+                responsive: true,
+                dom: '<"html5buttons"B>lTfgitp',
+                buttons: [
+                    {
+                        extend: 'copy'
+                            },
+                    {
+                        extend: 'csv'
+                            },
+                    {
+                        extend: 'excel',
+                        title: 'ExampleFile'
+                            },
+                    {
+                        extend: 'pdf',
+                        title: 'ExampleFile'
+                            },
+
+                    {
+                        extend: 'print',
+                        customize: function (win) {
+                            $(win.document.body).addClass('white-bg');
+                            $(win.document.body).css('font-size', '10px');
+
+                            $(win.document.body).find('table')
+                                .addClass('compact')
+                                .css('font-size', 'inherit');
+                        }
+                            }
+                        ]
+
+            });
+            $('.html5buttons').hide();
+            $('.dataTables_length').hide();
+            $('#DataTables_Table_0_filter').hide();
+            $('#DataTables_Table_1_filter').hide();
+            $('#DataTables_Table_2_filter').hide();
+            $('#DataTables_Table_3_filter').hide();
+            $('#DataTables_Table_4_filter').hide();
+            $('#DataTables_Table_5_filter').hide();
+            $('#DataTables_Table_6_filter').hide();
+            $('#DataTables_Table_7_filter').hide();
+            $('#DataTables_Table_8_filter').hide();
+
+            $('#monthpicker .input-group.date').datepicker({
+                format: 'mm/yyyy',
+                todayBtn: "linked",
+                keyboardNavigation: false,
+                forceParse: false,
+                calendarWeeks: true,
+                autoclose: true,
+                viewMode: "months",
+                minViewMode: "months"
+            });
+
+        });
+
+        $(".netis_competency_btn").click(function () {
+            alert("Open page Competency");
+        });
+        $('.chosen-select').chosen({
+            width: "100%"
+        });
     </script>
 </body>
 
